snapshots/serde/test_suite/tests/ui/remote/wrong_getter.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 22
kind: unit
spaces:
  - name: S
    start_line: 8
    end_line: 12
    kind: impl
    spaces:
      - name: get
        start_line: 9
        end_line: 11
        kind: function
        spaces: []
        metrics:
          nargs:
            function_args: 0
            closure_args: 0
            function_args_average: 0
            closure_args_average: 0
            total: 0
            value: 0
            average: 0
            function_args_min: 0
            function_args_max: 0
            closure_args_min: 0
            closure_args_max: 0
          nexits:
            sum: 0
            average: 0
            min: 0
            max: 0
          cognitive:
            sum: 0
            value: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 1
            value: 1
            average: 1
            min: 1
            max: 1
            modified:
              sum: 1
              value: 1
              average: 1
              min: 1
              max: 1
          halstead:
            unique_operators: 9
            total_operators: 10
            unique_operands: 3
            total_operands: 4
            length: 14
            estimated_program_length: 33.284
            purity_ratio: 2.377
            vocabulary: 12
            volume: 50.189
            difficulty: 6
            level: 0.167
            effort: 301.137
            time: 16.73
            bugs: 0.015
          loc:
            sloc: 3
            ploc: 3
            lloc: 0
            cloc: 0
            blank: 0
            sloc_average: 3
            ploc_average: 3
            lloc_average: 0
            cloc_average: 0
            blank_average: 0
            sloc_min: 3
            sloc_max: 3
            cloc_min: 0
            cloc_max: 0
            ploc_min: 3
            ploc_max: 3
            lloc_min: 0
            lloc_max: 0
            blank_min: 0
            blank_max: 0
          nom:
            functions: 1
            closures: 0
            functions_average: 1
            closures_average: 0
            total: 1
            average: 1
            functions_min: 1
            functions_max: 1
            closures_min: 0
            closures_max: 0
          tokens:
            tokens: 16
            average: 16
            min: 16
            max: 16
          mi:
            original: 132.61
            sei: 115.717
            visual_studio: 77.55
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            value: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 2
        value: 1
        average: 2
        min: 1
        max: 1
        modified:
          sum: 2
          value: 1
          average: 2
          min: 1
          max: 1
      halstead:
        unique_operators: 10
        total_operators: 12
        unique_operands: 4
        total_operands: 5
        length: 17
        estimated_program_length: 41.219
        purity_ratio: 2.425
        vocabulary: 14
        volume: 64.725
        difficulty: 6.25
        level: 0.16
        effort: 404.531
        time: 22.474
        bugs: 0.018
      loc:
        sloc: 5
        ploc: 5
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 2.5
        ploc_average: 2.5
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 3
        sloc_max: 5
        cloc_min: 0
        cloc_max: 0
        ploc_min: 3
        ploc_max: 5
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 0.5
        closures_average: 0
        total: 1
        average: 0.5
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 20
        average: 10
        min: 4
        max: 16
      mi:
        original: 122.782
        sei: 101.64
        visual_studio: 71.803
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
      wmc:
        class_wmc_sum: 1
        interface_wmc_sum: 0
        total: 1
      npm:
        class_npm_sum: 1
        interface_npm_sum: 0
        class_methods: 1
        interface_methods: 0
        class_coa: 1
        interface_coa: 0
        total: 1
        total_methods: 1
        coa: 1
      npa:
        class_npa_sum: 0
        interface_npa_sum: 0
        class_attributes: 0
        interface_attributes: 0
        class_cda: 0
        interface_cda: 0
        total: 0
        total_attributes: 0
        cda: 0
  - name: main
    start_line: 22
    end_line: 22
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 3
        total_operators: 3
        unique_operands: 1
        total_operands: 1
        length: 4
        estimated_program_length: 4.755
        purity_ratio: 1.189
        vocabulary: 4
        volume: 8
        difficulty: 1.5
        level: 0.667
        effort: 12
        time: 0.667
        bugs: 0.002
      loc:
        sloc: 1
        ploc: 1
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 1
        ploc_average: 1
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 1
        sloc_max: 1
        cloc_min: 0
        cloc_max: 0
        ploc_min: 1
        ploc_max: 1
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 6
        average: 6
        min: 6
        max: 6
      mi:
        original: 159.957
        sei: 155.17
        visual_studio: 93.542
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 4
    value: 1
    average: 2
    min: 1
    max: 1
    modified:
      sum: 4
      value: 1
      average: 2
      min: 1
      max: 1
  halstead:
    unique_operators: 20
    total_operators: 39
    unique_operands: 13
    total_operands: 21
    length: 60
    estimated_program_length: 134.544
    purity_ratio: 2.242
    vocabulary: 33
    volume: 302.664
    difficulty: 16.154
    level: 0.062
    effort: 4889.182
    time: 271.621
    bugs: 0.096
  loc:
    sloc: 22
    ploc: 18
    lloc: 0
    cloc: 0
    blank: 4
    sloc_average: 5.5
    ploc_average: 4.5
    lloc_average: 0
    cloc_average: 0
    blank_average: 1
    sloc_min: 1
    sloc_max: 22
    cloc_min: 0
    cloc_max: 0
    ploc_min: 1
    ploc_max: 18
    lloc_min: 0
    lloc_max: 0
    blank_min: 0
    blank_max: 4
  nom:
    functions: 2
    closures: 0
    functions_average: 0.5
    closures_average: 0
    total: 2
    average: 0.5
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 81
    average: 20.25
    min: 4
    max: 55
  mi:
    original: 90.299
    sei: 54.981
    visual_studio: 52.807
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 1
    interface_wmc_sum: 0
    total: 1
  npm:
    class_npm_sum: 1
    interface_npm_sum: 0
    class_methods: 1
    interface_methods: 0
    class_coa: 1
    interface_coa: 0
    total: 1
    total_methods: 1
    coa: 1
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 2
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 2
    cda: 0
